--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
+    "MyJsUtility": "file:c:/MyJsUtility",
     "babel-polyfill": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1"
