--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "FreightBillingSystem",
+  "name": "freight-billing-system",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Leo",
+  "author": "Leo Chen",
   "license": "MIT",
   "scripts": {
     "test": "webpack-dev-server --hot --mode=development",
     "build": "webpack"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-env": "^1.6.1",
@@ -19,9 +19,9 @@
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "MyJsUtility": "file:c:/MyJsUtility",
     "babel-polyfill": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "my-utility": "file:c:/MyJsUtility"
   }
 }
