--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
           "browsers": ["last 2 versions", "ie >= 11"]
         },
           "useBuiltIns": true
-      }]
+      }],
+      "react"
     ],
     "plugins": [
         "transform-remove-strict-mode"
