--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.3"
@@ -22,6 +25,9 @@
     "babel-polyfill": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
-    "my-utility": "file:c:/MyJsUtility"
+    "my-utility": "file:c:/MyJsUtility",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-table": "^6.8.6"
   }
 }
